[package]
name = "karu"
version = "0.1.0"
edition = "2021"

[dependencies]
ratatui = { version = "0.29.0", features = ["crossterm"] }
crossterm = "0.27.0"
nerd-font-symbols = "0.3.0"
xdg = "2.5.2"
trash = "4.0.0"
viuer = { version = "0.9.2", features = ["sixel", "print-file"] }
image = "0.24"
soloud = "1.0.2"


