[package]
name = "karu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ratatui = { version = "0.29.0", features = ["crossterm"] }
crossterm = "0.27.0"
nerd-font-symbols = "0.3.0"
trash = "4.0.0"
viuer = { version = "0.9.2", features = ["sixel", "print-file"] }
image = "0.25"

anyhow = "1.0.100"
open = "5.0.0"
