[package]
name = "karu"
version = "1.0.3"
edition = "2021"

[dependencies]
ratatui = { version = "0.29.0", features = ["crossterm"] }
crossterm = "0.27.0"
nerd-font-symbols = "0.3.0"
trash = "4.0.0"
viuer = { version = "0.9.2", features = ["sixel", "print-file"] }
image = "0.25"
anyhow = "1.0.100"
open = "5.0.0"
